# koso

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  genicons.sh  koso.afdesign  koso.code-workspace  koso.http  package-lock.json  package.json  renovate.json  tailwind.config.ts  yotei.code-workspace
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: other.md
.github/actions/find-docker-image-cache/: action.yml  index.js  script.js
.github/workflows/: ci.yml  deploy.yml  tauri-ci.yml  zero-ci.yml  zero-deploy.yml
backend/: .gitignore  Cargo.toml  koso.service  yotei.http
backend/.cargo/: config.toml
backend/assets/: index.html  script.js
backend/migrations/: 20240607032535_create-tasks.sql  20240620174857_setup-listeners.sql  20240701193719_add-children.sql  20240715214824_add-projects.sql  20240722193610_auth-users.sql  20240722211831_add-project-permissions.sql  20240726220226_add-project-to-task-pkey.sql  20240727140549_add-docs-table.sql  20240729213813_yupdates.sql  20240806213215_edit-projects-id-to-project-id.sql  20241113184226_initdb.down.sql  20241113184226_initdb.up.sql  20241113184913_createkosostaging.down.sql  20241113184913_createkosostaging.up.sql  20241114225508_addinviteduser.down.sql  20241114225508_addinviteduser.up.sql  20241114235733_add_deleted_on_to_projects.down.sql  20241114235733_add_deleted_on_to_projects.up.sql  20241129165537_addpluginconfig.down.sql  20241129165537_addpluginconfig.up.sql  20241211163130_updatepluginconfig.down.sql  20241211163130_updatepluginconfig.up.sql  20250101000000_add_google_workspace.down.sql  20250101000000_add_google_workspace.up.sql  20250121194721_user-timestamps.down.sql  20250121194721_user-timestamps.up.sql  20250129195321_user-notification-configs.down.sql  20250129195321_user-notification-configs.up.sql  20250206194601_convert-to-timestampz.down.sql  20250206194601_convert-to-timestampz.up.sql  20250211070326_add-notifier-settings-type.down.sql  20250211070326_add-notifier-settings-type.up.sql  20250211232833_add-plugin-config-settings-type.down.sql  20250211232833_add-plugin-config-settings-type.up.sql  20250507025823_replace-invited-with-premium.down.sql  20250507025823_replace-invited-with-premium.up.sql  20250523193750_add-github-login.down.sql  20250523193750_add-github-login.up.sql  20250622034206_add-stripe-columns.down.sql  20250622034206_add-stripe-columns.up.sql  (+6 more)
backend/psql_backups/: psql_backup.sh  psql_backup_cron.txt
backend/scripts/: init_db.sh  login_test_user.sh  run_dev.sh  setup_server.sh  stripe_listen.sh
backend/settings/: dev.json
backend/src/: api.rs  db_listener.rs  debug.rs  flags.rs  google.rs  healthz.rs  kosolib.rs  main.rs  mcp.rs  metrics_server.rs  model.rs  notifiers.rs  notify.rs  oauth.rs  plugins.rs  postgres.rs  push.rs  secrets.rs  server.rs  settings.rs  tests.rs  ws.rs
backend/src/api/: anthropic.rs  auth.rs  billing.rs  collab.rs  dev.rs  dupes.rs  gemini.rs  google.rs  model.rs  notify.rs  poll.rs  profile.rs  projects.rs  simulate.rs  users.rs  ws.rs  yproxy.rs
backend/src/api/anthropic/: breakdown.txt
backend/src/api/collab/: awareness.rs  client.rs  client_message_handler.rs  client_messages.rs  doc_observer.rs  doc_update_processor.rs  doc_updates.rs  msg_sync.rs  notifications.rs  projects_state.rs  storage.rs  txn_origin.rs  yrs_message_processor.rs
backend/src/api/simulations/: context.txt  summarize.txt
backend/src/notifiers/: README.md  discord.rs  slack.rs  teams.rs  telegram.rs
backend/src/plugins/: config.rs  github.rs
backend/src/plugins/github/: app.rs  auth.rs  config.rs  connect.rs  poller.rs  webhook.rs
backend/src/plugins/google_workspace/: README.md  app.rs  connect.rs  mod.rs  models.rs  sync.rs  tests.rs
backend/src/settings/: dev.json  dev.toml  prod.json  prod.toml
backend/src/testdata/: checkout.session.completed.json  closed_pr.json  customer.subscription.created.json  invoice.paid.json  opened_pr.json
backend/tests/: main.rs
dedupe/: cli.py  clustering_and_similarity.ipynb  clustering_and_similarity_anvi.ipynb  dedupe-anvi.ipynb  dedupe.ipynb  dedupe.py  dedupe_notebook.ipynb  embedding-anvi.ipynb  emedding-niwako.ipynb  koso-dogfood-export-2025-7-5-12-2.json  koso-for-deduping.csv  main.py  potential_duplicates.csv  pyproject.toml
dupes/: README.md  main.py  pyproject.toml
frontend/: .gitignore  .npmrc  .prettierignore  .prettierrc  components.json  eslint.config.js  genicons.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  testtttt  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.client.js  hooks.client.ts  hooks.server.ts  service-worker.ts
frontend/src/lib/: HierarchicalTable.svelte  anthropic-stream.svelte.ts  anthropic.svelte.ts  api.ts  auth.svelte.ts  auth.ts  circular-progress-status.svelte  circular-progress.stories.ts  circular-progress.svelte  errors.ts  gemini.svelte.ts  github.ts  key-binding.ts  key-handler-registry.ts  koso.svelte.ts  koso.test.ts  koso.ts  nav.svelte.ts  nav.ts  navbar.stories.ts  navbar.svelte  navigation-action.ts  popover-monitor.ts  project-share-modal.svelte  projects.ts  (+32 more)
frontend/static/: manifest.json
frontend/tests/: collab-test.ts  dag-table-test.ts  gh-poll-test.ts  import-export-test.ts  inbox-test.ts  invite-test.ts  kosui-button-test.ts  mcp-test.ts  new-project-test.ts  project-test.ts  setup.ts  subscription-test.ts  test.ts  utils.ts
healthz/: Cargo.toml  Dockerfile  README.md
healthz/src/: main.rs
kosolib/: Cargo.toml
kosolib/src/: lib.rs
src/routes/: +layout.svelte  +page.svelte
storyboard/: koso.md
zero/: .npmrc  LICENSE  components.json  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.js
zero/src/: app.css  app.html
zero/src-tauri/: Cargo.toml  tauri.conf.json
zero/src-tauri/icons/: icon.icns
zero/src-tauri/src/: lib.rs  main.rs
(+407 files in other folders)
