[package]
name = "koso"
version = "0.1.0"
edition = "2024"

# Target built docker to speed up dependency compilation.
# See Dockerfile.
[lib]
name = "build_backend_dummy"
path = "build/dummy.rs"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "ws", "macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
uuid = { version = "1.18.1", features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde",    # Enable serde serialization support
] }
tower-http = { version = "0.6.7", features = [
    "fs",
    "trace",
    "timeout",
    "request-id",
    "cors",
] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "macros", "chrono", "rust_decimal", "uuid"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
listenfd = "1.0.2"
metrics = { version = "0.24.2", default-features = false }
metrics-exporter-prometheus = { version = "0.18.0", default-features = false }
futures = "0.3.31"
yrs = { version = "0.25.0", features = ["sync"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
base64 = "0.22.1"
anyhow = "1.0.100"
rand = "0.9.2"
tower = "0.5.2"
similar = "2.7.0"
chrono = { version = "0.4.42", features = ["serde"] }
octocrab = "0.48.0"
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.9"
async-trait = "0.1.89"
config = { version = "0.15.19", default-features = false, features = ["json"] }
regex = "1.12.2"
serde_qs = "1.0.0-rc.3"
ed25519-dalek = "2.2.0"
tokio-tungstenite = { version = "0.28.0" }
rmcp = { version = "0.9.1", features = ["server", "transport-io", "transport-streamable-http-server", "transport-sse-server", "auth"] }
url = "2.5.7"
rust_decimal = { version = "1.39.0", features = ["serde"] }
axum-anyhow = "0.8.0"

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace", "color"] }
tokio-tungstenite = { version = "0.28.0", features = ["url"] }
rsa = "0.9.9"
