[project]
name = "koso-dedupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.61.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "openai>=1.99.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "voyageai>=0.3.4",
]
