[package]
name = "healthz"
version = "0.1.0"
edition = "2024"

# Target built docker to speed up dependency compilation.
# See Dockerfile.
[lib]
name = "build_healthz_dummy"
path = "build/dummy.rs"

[dependencies]
anyhow = { version = "1.0.100" }
axum = "0.8.4"
reqwest = { version = "0.12.23", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
