[package]
name = "healthz"
version = "0.1.0"
edition = "2024"

# Target built docker to speed up dependency compilation.
# See Dockerfile.
[lib]
name = "build_healthz_dummy"
path = "build/dummy.rs"

[dependencies]
anyhow = { version = "1.0.100" }
axum = "0.8.8"
reqwest = { version = "0.13.1", features = ["json"] }
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
