[package]
name = "zero"
version = "0.1.0"
description = "Zero tauri app"
authors = ["koso"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
kosolib = { version = "0.1.0", path = "../../kosolib" }
